[package]
name = "th_to_csv"
version = "1.0.0"
authors = ["OpenRadioss Contributors"]
edition = "2021"
license = "MIT"
description = "Converter for OpenRadioss time history files to CSV format"

[[bin]]
name = "th_to_csv"
path = "src/main.rs"

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
